--- a/src/stylesheets/PlaygroundScore.module.scss
+++ b/src/stylesheets/PlaygroundScore.module.scss
@@ -2,7 +2,7 @@
 
 .leaderboard {
   @include flexCenter(column);
-  @include sizeWH(2.9rem, 2.7rem);
+  @include sizeWH(2.9rem, 2.35rem);
   @include position(absolute, 0.2rem, $right: -0.02rem);
   border: 0.02rem solid #000;
 
